[tool.poetry]
name = "crowd"
version = "0.1.0"
description = ""
authors = ["Brandon Flowers <brandon.flowers@prenuvo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.2"
flask-cors = "^4.0.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
