[tool.poetry]
name = "blockbuilder"
version = "0.1.0"
description = ""
authors = ["Brandon Flowers <brandon.flowers@prenuvo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
